@@ -1,6 +1,7 @@
 sventon change history
 -----------------------------------------------------------------------------------------
 
+[590] Added: Feature #1868 - Unified diff view.
 [563] Added: Feature #2259 - Revision info cache.
 [552] Added: Upgraded to JavaSVN 1.1.0beta2.
 [546] Fixed: Redesign of entry cache.
